--- a/data-architect.html
+++ b/data-architect.html
@@ -187,7 +187,7 @@ dig?...</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/qlik/job/o2Dxafw6'>Qlik Careers - Analytics Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/qlik/job/o2Dxafw6'>Qlik Careers - Analytics Data Architect</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -195,7 +195,7 @@ dig?...</p>
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Qlarion/743999697081782-sr-data-architect'>Qlarion Sr. Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Qlarion/743999697081782-sr-data-architect'>Qlarion Sr. Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Richmond, VA, USA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -219,7 +219,7 @@ dig?...</p>
 <p><span class="badge badge-light">Pittsburgh United States</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51/apply'>Ridango AS - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51/apply'>Ridango AS - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Data Architect. Tallinn. Engineering ? Development Leads. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
@@ -250,11 +250,11 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o4Lkbfw4&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=ntyHeMwd'>Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o4Lkbfw4&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=ntyHeMwd'>Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<h5><a href='https://geico.referrals.selectminds.com/jobs/junior-data-architect-10713'>Junior Data Architect - GEICO Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://geico.referrals.selectminds.com/jobs/junior-data-architect-10713'>Junior Data Architect - GEICO Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -372,7 +372,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o4Lkbfw4&__jvst=Employee&__jvsd=svnAVfw7&__jvsc=Twitter&bid=nm2B9Mwp'>Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o4Lkbfw4&__jvst=Employee&__jvsd=svnAVfw7&__jvsc=Twitter&bid=nm2B9Mwp'>Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -408,7 +408,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tiger-analytics.workable.com/j/41EF005092'>Big Data Architect - Apply online - Tiger Analytics - Jobs</a></h5> 
+<h5><a href='https://tiger-analytics.workable.com/j/41EF005092'>Big Data Architect - Apply online - Tiger Analytics - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 4, 2019 ... Apply online for the job of Big Data Architect at Tiger Analytics.</p>
 <hr/>
@@ -444,7 +444,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Boston, MA, USA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://tetrascience.workable.com/jobs/1133176'>TetraScience - Jobs: Life Sciences Data Engineer and Solution Architect - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tetrascience.workable.com/jobs/1133176'>TetraScience - Jobs: Life Sciences Data Engineer and Solution Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
